LC-833 initializes patternlab and applies color changes

--- a/source/_patterns/00-atoms/01-global/00-colors.mustache
+++ b/source/_patterns/00-atoms/01-global/00-colors.mustache
@@ -1,38 +1,89 @@
+<h2>Vibrant Colors</h2>
 <ul class="sg-colors">
 	<li>
-		<span class="sg-swatch" style="background: #000000;"></span>
-		<span class="sg-label">#ffffff</span>
+		<span class="sg-label">Orange</span>
+		<span class="sg-swatch" style="background: #CC4E10;"></span>
+		<span class="sg-label">#CC4E10</span>
 	</li>
 	<li>
-		<span class="sg-swatch" style="background: #00ff00;"></span>
-		<span class="sg-label">#00ff00</span>
+		<span class="sg-label">ClassicBlue</span>
+		<span class="sg-swatch" style="background: #014982;"></span>
+		<span class="sg-label">#014982</span>
 	</li>
 	<li>
-		<span class="sg-swatch" style="background: #0000ff;"></span>
-		<span class="sg-label">#0000ff</span>
+		<span class="sg-label">LightBlue</span>
+		<span class="sg-swatch" style="background: #63C9F7;"></span>
+		<span class="sg-label">#63C9F7</span>
 	</li>
 	<li>
-		<span class="sg-swatch" style="background: #ffff00;"></span>
-		<span class="sg-label">#ffff00</span>
+		<span class="sg-label">RichRed</span>
+		<span class="sg-swatch" style="background: #CC2A14;"></span>
+		<span class="sg-label">#CC2A14</span>
 	</li>
 	<li>
-		<span class="sg-swatch" style="background: #00ffff;"></span>
-		<span class="sg-label">#00ffff</span>
+		<span class="sg-label">LightGreen</span>
+		<span class="sg-swatch" style="background: #92CC4E;"></span>
+		<span class="sg-label">#92CC4E</span>
 	</li>
 	<li>
-		<span class="sg-swatch" style="background: #ff00ff;"></span>
-		<span class="sg-label">#ff00ff</span>
-	</li>
-	<li>
-		<span class="sg-swatch" style="background: #ffffff;"></span>
-		<span class="sg-label">#ffffff</span>
-	</li>
-	<li>
-		<span class="sg-swatch" style="background: #808080;"></span>
-		<span class="sg-label">#808080</span>
-	</li>
-	<li>
-		<span class="sg-swatch" style="background: #000000;"></span>
-		<span class="sg-label">#000000</span>
+		<span class="sg-label">Yellow</span>
+		<span class="sg-swatch" style="background: #FFEB3B;"></span>
+		<span class="sg-label">#FFEB3B</span>
 	</li>
 </ul>
+<h2>Business Colors</h2>
+<ul class="sg-colors">
+	<li>
+		<span class="sg-label">Orange</span>
+		<span class="sg-swatch" style="background: #CC4E10;"></span>
+		<span class="sg-label">#CC4E10</span>
+	</li>
+	<li>
+		<span class="sg-label">ClassicBlue</span>
+		<span class="sg-swatch" style="background: #014982;"></span>
+		<span class="sg-label">#014982</span>
+	</li>
+	<li>
+		<span class="sg-label">Teal</span>
+		<span class="sg-swatch" style="background: #00758C;"></span>
+		<span class="sg-label">#00758C</span>
+	</li>
+	<li>
+		<span class="sg-label">Burgundy</span>
+		<span class="sg-swatch" style="background: #800D20;"></span>
+		<span class="sg-label">#800D20</span>
+	</li>
+	<li>
+		<span class="sg-label">RichGreen</span>
+		<span class="sg-swatch" style="background: #326E1E;"></span>
+		<span class="sg-label">#326E1E</span>
+	</li>
+	<li>
+		<span class="sg-label">ClassicGold</span>
+		<span class="sg-swatch" style="background: #F9B000;"></span>
+		<span class="sg-label">#F9B000</span>
+	</li>
+</ul>
+<h2>Shades</h2>
+<ul class="sg-colors">
+	<li>
+		<span class="sg-label">Black(87%)</span>
+		<span class="sg-swatch" style="background: #212121;"></span>
+		<span class="sg-label">#212121</span>
+	</li>
+	<li>
+		<span class="sg-label">DarkGrey(72%)</span>
+		<span class="sg-swatch" style="background: #474747;"></span>
+		<span class="sg-label">#474747</span>
+	</li>
+	<li>
+		<span class="sg-label">LightGrey(12%)</span>
+		<span class="sg-swatch" style="background: #E0E0E0;"></span>
+		<span class="sg-label">#E0E0E0</span>
+	</li>
+	<li>
+		<span class="sg-label">White</span>
+		<span class="sg-swatch" style="background: #FFFFFF;"></span>
+		<span class="sg-label">#FFFFFF</span>
+	</li>
+ </ul>
