--- a/source/_patterns/00-atoms/01-global/00-colors.mustache
+++ b/source/_patterns/00-atoms/01-global/00-colors.mustache
@@ -1,7 +1,7 @@
 <ul class="sg-colors">
 	<li>
 		<span class="sg-swatch" style="background: #000000;"></span>
-		<span class="sg-label">#ffffff</span>
+		<span class="sg-label">#f0f0f0</span>
 	</li>
 	<li>
 		<span class="sg-swatch" style="background: #00ff00;"></span>
