--- a/source/_patterns/00-atoms/00-meta/_00-head.mustache
+++ b/source/_patterns/00-atoms/00-meta/_00-head.mustache
@@ -4,6 +4,7 @@
 		<title>{{ title }}</title>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width" />
+		<script src="http://globalnav.lacity.org/global_nav_2.0.js"></script> 
 		<link href='http://fonts.googleapis.com/css?family=Varela' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Droid+Sans:400' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="../../css/style.css?{{ cacheBuster }}" media="all" />
