--- a/source/css/scss/generic/_variables.scss
+++ b/source/css/scss/generic/_variables.scss
@@ -19,6 +19,7 @@ $richgreen: #326E1E;
 $classicgold: #F9B000;
 
 //Shades & Tints
+$white : #fff;
 $gray : #E0E0E0;
 $gray-light : $gray;
 $gray-light-2 : $gray;
@@ -26,7 +27,6 @@ $gray-light-3 : $gray;
 $gray-med : #474747;
 $gray-dark : $gray-med;
 $gray-dark-2 : $gray-med;
-$white : #fff;
 $black : #212121;
 $dim : rgba(0,0,0,0.5);
 
@@ -68,15 +68,13 @@ $border-thick: 7px;
 
 
 //Breakpoints
-$bp-small : 24em;
+$bp-small : 320px; //Phone
 $bp-small-2 : 29.75em;
 $bp-small-3 : 39.8em;
-$bp-med : 46.8em;
+$bp-med : 480px; //Tablet
 $bp-med-2 : 48em;
-$bp-large : 50em;
+$bp-large : 960px; //Desktop
 $bp-large-2 : 66em;
 $bp-xl : 73em;
 $bp-xxl : 89em;
 $bp-xxxl : 93em;
-
-//
