--- a/source/css/scss/generic/_variables.scss
+++ b/source/css/scss/generic/_variables.scss
@@ -72,9 +72,9 @@ $bp-small : 320px; //Phone
 $bp-small-2 : 29.75em;
 $bp-small-3 : 39.8em;
 $bp-med : 480px; //Tablet
-$bp-med-2 : 48em;
+$bp-med-2 : 720px; //Tablet Wide
 $bp-large : 960px; //Desktop
-$bp-large-2 : 66em;
+$bp-large-2 : 1280px; //Desktop Wide
 $bp-xl : 73em;
 $bp-xxl : 89em;
 $bp-xxxl : 93em;
