--- a/source/css/scss/generic/_variables.scss
+++ b/source/css/scss/generic/_variables.scss
@@ -30,8 +30,8 @@ $gray-dark-2 : $gray-med;
 $black : #212121;
 $dim : rgba(0,0,0,0.5);
 
-$error : #f00;
-$valid : #089e00;
+$error : $richred;
+$valid : $lightgreen;
 $warning : #fff664;
 $information : #000db5;
 
