--- a/core/source/css/scss/objects/_buttons.scss
+++ b/core/source/css/scss/objects/_buttons.scss
@@ -10,6 +10,7 @@
 	padding: $pad;
 	border: 0;
 	text-align: center;
+	@include vendor-prefix(border-radius, 5px);
 	
 	&:hover, &:focus {
 		background: $gray;
