--- a/source/css/style.css
+++ b/source/css/style.css
@@ -188,12 +188,12 @@ header, footer, nav, section, article, hgroup, figure {
 
 /* line 84, scss/base/_global-classes.scss */
 .valid {
-  color: #089e00;
+  color: #92CC4E;
 }
 
 /* line 88, scss/base/_global-classes.scss */
 .error {
-  color: #f00;
+  color: #CC2A14;
 }
 
 /* line 92, scss/base/_global-classes.scss */
@@ -357,6 +357,7 @@ hr {
 abbr {
   border-bottom: 1px dotted #E0E0E0;
   cursor: help;
+  color: #CC4E10;
 }
 
 /* line 1, scss/base/_lists.scss */
@@ -423,37 +424,47 @@ form ol, form ul {
 
 /* line 9, scss/base/_forms.scss */
 fieldset {
-  border: 0;
-  padding: 0;
+  border: 1px solid #E0E0E0;
+  padding: 1.5em;
   margin: 0;
+  -webkit-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -o-border-radius: 5px;
+  border-radius: 5px;
 }
 
-/* line 15, scss/base/_forms.scss */
+/* line 16, scss/base/_forms.scss */
 label {
   display: block;
   padding-bottom: 0.5em;
 }
 
-/* line 20, scss/base/_forms.scss */
+/* line 21, scss/base/_forms.scss */
 button, input, select, textarea {
   font-family: inherit;
   font-size: 100%;
   margin: 0 1px 0;
+  -webkit-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -o-border-radius: 5px;
+  border-radius: 5px;
 }
 
-/* line 26, scss/base/_forms.scss */
+/* line 28, scss/base/_forms.scss */
 input, textarea {
   width: 100%;
   border: 1px solid #E0E0E0;
   padding: 0.5em 0.65rem;
 }
 
-/* line 32, scss/base/_forms.scss */
+/* line 34, scss/base/_forms.scss */
 input[type=text], input[type=search], input[type=url], input[type=number], textarea {
   -webkit-appearance: none;
 }
 
-/* line 36, scss/base/_forms.scss */
+/* line 38, scss/base/_forms.scss */
 button, input[type="submit"] {
   padding: 0.5em;
   background: #474747;
@@ -461,35 +472,36 @@ button, input[type="submit"] {
   cursor: pointer;
 }
 
-/* line 43, scss/base/_forms.scss */
+/* line 45, scss/base/_forms.scss */
 input[type="checkbox"],
 input[type="radio"] {
   width: auto;
   margin-right: 0.3em;
 }
 
-/* line 49, scss/base/_forms.scss */
+/* line 51, scss/base/_forms.scss */
 input[type="search"] {
   -webkit-appearance: none;
-  border-radius: 0;
 }
 
-/* line 54, scss/base/_forms.scss */
+/* line 55, scss/base/_forms.scss */
 input[type="search"]::-webkit-search-cancel-button,
 input[type="search"]::-webkit-search-decoration {
   -webkit-appearance: none;
 }
 
-/* line 60, scss/base/_forms.scss */
+/* line 61, scss/base/_forms.scss */
 .field-container {
   margin-bottom: 1em;
 }
 
-/* line 65, scss/base/_forms.scss */
+/* line 66, scss/base/_forms.scss */
 .inline-form fieldset, .inline-form .inline-container {
   position: relative;
+  border: 0;
+  padding: 0;
 }
-/* line 69, scss/base/_forms.scss */
+/* line 72, scss/base/_forms.scss */
 .inline-form input[type=submit], .inline-form button, .inline-form .btn {
   font-size: 0.875em;
   padding: 0.65rem 1.3rem;
@@ -500,33 +512,33 @@ input[type="search"]::-webkit-search-decoration {
   z-index: 1;
   width: auto;
 }
-/* line 79, scss/base/_forms.scss */
+/* line 81, scss/base/_forms.scss */
 .inline-form input[type=submit]:hover, .inline-form input[type=submit]:focus, .inline-form button:hover, .inline-form button:focus, .inline-form .btn:hover, .inline-form .btn:focus {
   background: #E0E0E0;
   color: #fff;
 }
 
 /* Validation */
-/* line 87, scss/base/_forms.scss */
-.has-error {
-  border-color: #f00;
+/* line 89, scss/base/_forms.scss */
+.is-error {
+  border-color: #CC2A14;
 }
 
-/* line 90, scss/base/_forms.scss */
+/* line 92, scss/base/_forms.scss */
 .is-valid {
-  border-color: #089e00;
+  border-color: #92CC4E;
 }
 
 /*------------------------------------*\
     $SPECIFIC FORMS
 \*------------------------------------*/
 /* Search Form */
-/* line 102, scss/base/_forms.scss */
+/* line 104, scss/base/_forms.scss */
 .search-field {
   padding-right: 3em;
 }
 
-/* line 105, scss/base/_forms.scss */
+/* line 107, scss/base/_forms.scss */
 .inline-form .search-submit {
   background: none;
   padding: 0.78em 1em;
@@ -1251,31 +1263,36 @@ td {
 /* line 4, scss/objects/_buttons.scss */
 .btn {
   display: inline-block;
-  background: #474747;
+  background: #014982;
   color: #fff;
   line-height: 1;
   font-weight: bold;
   padding: 1em;
   border: 0;
   text-align: center;
+  -webkit-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -o-border-radius: 5px;
+  border-radius: 5px;
 }
-/* line 14, scss/objects/_buttons.scss */
+/* line 15, scss/objects/_buttons.scss */
 .btn:hover, .btn:focus {
-  background: #E0E0E0;
+  background: #474747;
   color: #fff;
 }
-/* line 19, scss/objects/_buttons.scss */
+/* line 20, scss/objects/_buttons.scss */
 .btn.disabled {
   background: #E0E0E0;
   color: #E0E0E0;
 }
 
-/* line 25, scss/objects/_buttons.scss */
+/* line 26, scss/objects/_buttons.scss */
 .btn-small {
   padding: 0.5em;
 }
 
-/* line 29, scss/objects/_buttons.scss */
+/* line 30, scss/objects/_buttons.scss */
 .btn-large {
   padding: 0.5em;
   text-transform: uppercase;
@@ -1284,7 +1301,7 @@ td {
   font-weight: normal;
 }
 
-/* line 38, scss/objects/_buttons.scss */
+/* line 39, scss/objects/_buttons.scss */
 .text-btn {
   font-style: italic;
 }
@@ -1707,7 +1724,7 @@ td {
 
 /* line 14, scss/objects/_messaging.scss */
 .alert-error {
-  color: #f00;
-  border-color: #f00;
+  color: #CC2A14;
+  border-color: #CC2A14;
   background: #ffbebe;
 }
