--- a/source/css/style.css
+++ b/source/css/style.css
@@ -1257,6 +1257,12 @@ td {
   margin-right: 0.5em;
 }
 
+/* line 127, scss/objects/_icons.scss */
+.icons img {
+  height: 1.5em;
+  margin: 0.2em;
+}
+
 /*------------------------------------*\
     $BUTTONS
 \*------------------------------------*/
