LC-833 changes icon bg color to show the icons better

--- a/source/_patterns/00-atoms/04-images/05-icons.mustache
+++ b/source/_patterns/00-atoms/04-images/05-icons.mustache
@@ -1,4 +1,4 @@
-<ul class="icons inline-list" style="background-color: #e0e0e0; padding: 1em;">
+<ul class="icons inline-list" style="background-color: #474747; padding: 1em;">
 	<!-- <li class="icon-twitter"></li>
 	<li class="icon-facebook"></li>
 	<li class="icon-stumbleupon"></li>
