--- a/source/_patterns/01-molecules/05-navigation/00-primary-nav.mustache
+++ b/source/_patterns/01-molecules/05-navigation/00-primary-nav.mustache
@@ -1,8 +1,8 @@
 <nav id="nav" class="nav">
 	<ul class="nav-list">
-		<li><a href="{{ url }}">Home</a></li>
-		<li><a href="{{ url }}">About</a></li>
-		<li><a href="{{ url }}">Blog</a></li>
-		<li><a href="{{ url }}">Contact</a></li>
+		<li><a href="{{ url }}"><div class="nav-button"><img src="../../images/weather_icon.png"></div></a></li>
+		<li><a href="{{ url }}"><img src="../../images/feedback_icon.png"></a></li>
+		<li><a href="{{ url }}"><img src="../../images/localsearch_icon.png"></a></li>
+		<li><a href="{{ url }}"><img src="../../images/menu_icon.png"></a></li>
 	</ul>
 </nav><!--end .nav-->
