LC-833 applies style for above button nav

--- a/source/_patterns/01-molecules/05-navigation/00-primary-nav.mustache
+++ b/source/_patterns/01-molecules/05-navigation/00-primary-nav.mustache
@@ -1,8 +1,12 @@
 <nav id="nav" class="nav">
+	<ul class="nav-links">
+		<li><a href="#">City Directory</a></li>
+		<li><a href="#">| Traffic Info</a></li>
+	</ul>
 	<ul class="nav-list">
-		<li><a href="{{ url }}"><div class="nav-button"><img src="../../images/weather_icon.png"></div></a></li>
-		<li><a href="{{ url }}"><img src="../../images/feedback_icon.png"></a></li>
-		<li><a href="{{ url }}"><img src="../../images/localsearch_icon.png"></a></li>
-		<li><a href="{{ url }}"><img src="../../images/menu_icon.png"></a></li>
+		<li><a class="nav-button" href="{{ url }}"><img src="../../images/weather_icon.png"></a></li>
+		<li><a class="nav-button" href="{{ url }}"><img src="../../images/feedback_icon.png"></a></li>
+		<li><a class="nav-button" href="{{ url }}"><img src="../../images/localsearch_icon.png"></a></li>
+		<li><a class="nav-button" href="{{ url }}"><img src="../../images/menu_icon.png"></a></li>
 	</ul>
 </nav><!--end .nav-->
