--- a/source/css/style.css
+++ b/source/css/style.css
@@ -945,19 +945,23 @@ td {
   overflow: hidden;
   max-height: 0;
 }
-/* line 10, scss/objects/_nav.scss */
-.nav img {
-  height: 1.6em;
+/* line 11, scss/objects/_nav.scss */
+.nav .nav-links {
+  margin-left: 1em;
 }
-/* line 16, scss/objects/_nav.scss */
-.nav a {
+/* line 13, scss/objects/_nav.scss */
+.nav .nav-links li {
+  padding-right: 0.5em;
+  padding-top: 0.25em;
+}
+/* line 18, scss/objects/_nav.scss */
+.nav .nav-button {
   display: block;
   text-align: center;
   padding: 0.5em 0;
   margin: 0.5em;
   width: 2.7em;
   height: 2.7em;
-  border-top: 1px solid #E0E0E0;
   background: #CC4E10;
   -webkit-border-radius: 8px;
   -ms-border-radius: 8px;
@@ -965,7 +969,15 @@ td {
   -o-border-radius: 8px;
   border-radius: 8px;
 }
-/* line 29, scss/objects/_nav.scss */
+/* line 30, scss/objects/_nav.scss */
+.nav img {
+  height: 1.6em;
+}
+/* line 36, scss/objects/_nav.scss */
+.nav a {
+  border-top: 1px solid #E0E0E0;
+}
+/* line 41, scss/objects/_nav.scss */
 .nav.active {
   max-height: 40em;
 }
@@ -976,30 +988,30 @@ td {
     float: right;
     clear: none;
   }
-  /* line 38, scss/objects/_nav.scss */
+  /* line 50, scss/objects/_nav.scss */
   .nav li {
     float: left;
   }
-  /* line 42, scss/objects/_nav.scss */
+  /* line 54, scss/objects/_nav.scss */
   .nav a {
     border: 0;
   }
 }
 
-/* line 50, scss/objects/_nav.scss */
+/* line 62, scss/objects/_nav.scss */
 .pagination {
   overflow: hidden;
 }
-/* line 53, scss/objects/_nav.scss */
+/* line 65, scss/objects/_nav.scss */
 .pagination li {
   float: left;
   border-right: 1px solid #E0E0E0;
 }
-/* line 57, scss/objects/_nav.scss */
+/* line 69, scss/objects/_nav.scss */
 .pagination li:last-child {
   border: 0;
 }
-/* line 62, scss/objects/_nav.scss */
+/* line 74, scss/objects/_nav.scss */
 .pagination a {
   padding: 1em;
 }
