--- a/source/css/style.css
+++ b/source/css/style.css
@@ -904,6 +904,30 @@ td {
 }
 
 /* line 23, scss/objects/_header.scss */
+.title {
+  font-size: 1.625em;
+  line-height: 1.15384615em;
+  width: 60%;
+  margin: 1.125% 0 1.125% 1.5%;
+  float: left;
+  color: #fff;
+}
+@media all and (min-width: 720px) {
+  /* line 23, scss/objects/_header.scss */
+  .title {
+    font-size: 2em;
+    line-height: 1.25em;
+  }
+}
+@media all and (min-width: 960px) {
+  /* line 23, scss/objects/_header.scss */
+  .title {
+    font-size: 2.25em;
+    line-height: 1.25em;
+  }
+}
+
+/* line 40, scss/objects/_header.scss */
 .nav-toggle {
   float: right;
   display: block;
@@ -913,26 +937,26 @@ td {
   border-left: 1px solid #dbdbdb;
 }
 @media all and (min-width: 480px) {
-  /* line 23, scss/objects/_header.scss */
+  /* line 40, scss/objects/_header.scss */
   .nav-toggle {
     display: none;
   }
 }
 @media all and (max-width: 17em) {
-  /* line 23, scss/objects/_header.scss */
+  /* line 40, scss/objects/_header.scss */
   .nav-toggle {
     padding-left: 0.2rem;
     padding-right: 0.2rem;
   }
 }
 
-/* line 41, scss/objects/_header.scss */
+/* line 58, scss/objects/_header.scss */
 .search-form {
   overflow: hidden;
   max-height: 0;
 }
 @media all and (min-width: 480px) {
-  /* line 41, scss/objects/_header.scss */
+  /* line 58, scss/objects/_header.scss */
   .search-form {
     float: right;
     max-height: none;
